atualizações na entrada e saída de texto

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Label.gd", "res://LineEdit.gd", "res://Node2D.gd"]
 selected_script="res://Label.gd"
-open_help=[]
+open_help=["String"]
 script_split_offset=70
 list_split_offset=0
 
