--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Label.gd", "res://LineEdit.gd", "res://Node2D.gd"]
-selected_script="res://Label.gd"
+selected_script="res://LineEdit.gd"
 open_help=["String"]
 script_split_offset=70
 list_split_offset=0
